# ChangeLog for www-client/surfraw
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  25 Jun 2011; James Rowe <jnrowe@gmail.com> surfraw-9999.ebuild:
  Switched to git-2 eclass.

  31 Jan 2011; James Rowe <jnrowe@gmail.com> surfraw-9999.ebuild:
  Synced with upstream's current 2.2.7 ebuild, no important user visible
  changes.

  12 Jan 2011; James Rowe <jnrowe@gmail.com> +watch:
  Added watch file for package updates.

  10 Jun 2010; James Rowe <jnrowe@gmail.com> surfraw-9999.ebuild:
  Switched to using base.eclass' src_install.

  10 Jun 2010; James Rowe <jnrowe@gmail.com> surfraw-9999.ebuild:
  Autotools files are no longer in VCS, so we need to generate them.

  14 Jan 2010; James Rowe <jnrowe@gmail.com> surfraw-9999.ebuild:
  Dropped keywords in live ebuild.

  20 Nov 2009; James Rowe <jnrowe@gmail.com> surfraw-9999.ebuild:
  Added notification for config file moves.

*surfraw-9999 (14 Oct 2009)

  14 Oct 2009; James Rowe <jnrowe@gmail.com>
  +files/surfraw-9999-gentoo_pkg_tools.patch, +surfraw-9999.ebuild,
  +metadata.xml:
  Added live ebuild from git sources.
