@@ -2,14 +2,14 @@
 Hash: SHA512
 
 AUX surfraw-9999-gentoo_pkg_tools.patch 1128 RMD160 e801d527f756ab00c28d02f4ffa2224f57d8adbd SHA1 34c9ee51940baecede9a0f87b6a6b16299ccd23e SHA256 b79ea151bdcad358ea83a27d04aa1b80e7d4279906ef7fc227f32eed1b349fbb
-EBUILD surfraw-9999.ebuild 2708 RMD160 f5e8d681759ba35202651e0fe25aab78a98c91de SHA1 405c33c47b7fb37a8c6731052e4e234ccfaa19a1 SHA256 2626aa15219dabc4c4a6ef59b01d68377f260eba611fa83c2ae3c326f628f618
-MISC ChangeLog 1119 RMD160 310e557382884a11988025ebdb5ea7f55a75f08c SHA1 289d7c3b6ca4890c1e2c397acce5a27f3b0f64b9 SHA256 173637fb183090685d4411d2b628750df0fa3a96440d9e2107e289539ba8a74f
+EBUILD surfraw-9999.ebuild 2620 RMD160 79f62839a9ed2ec4ca422f9030415cbda6f43dff SHA1 9a43aaf5d026a54add368b0b6e6028d63a771d30 SHA256 167f0902da8bad9186388abb94cfd73114bfa48d981ce5603b47e4741bb7d957
+MISC ChangeLog 1270 RMD160 cd0b8ba03a54449d9fff2bcd5f225aa62b76ba16 SHA1 54f4965db9b1ad8ae16e798c3d5ad13a0130f020 SHA256 16ade2d5d39ecf361ca4502e105e47113ef0f3dba762b6db479e67d68243c706
 MISC metadata.xml 1443 RMD160 2e0175dba32af3bbb95ae29643d9a52bce61f724 SHA1 fd90b230e1b1340836bd87756f59b8712b0c01c7 SHA256 553e178032c3ed0df38c973c55d5a19c38d3e2a378f02803cebf97b5419190c9
 MISC watch 14 RMD160 e6566124c25a2027f5802091cba438642beb9a5a SHA1 cf32750943c14466fca333d1c08efb1ab8c519bb SHA256 3f18d685e67e7f79c0b8e2f162d6804e863521dc39d6fac38f682371c41f24ad
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk4GBlAACgkQzJrj3cAXR0kEGwCdF2eNNsmBSfgr4z7gKtE3KenX
-m4wAn3MsYqqSdSObnaEg+8yaGvhKXSUL
-=c3Fb
+iEYEAREKAAYFAk5mbh4ACgkQzJrj3cAXR0lyKgCfQDJGU7QtPVdS6c2L6jqVlxM0
+V/oAoKx7VAkOU99EkQJN4E4KoTlz7vd7
+=a8fB
 -----END PGP SIGNATURE-----
